# galvanic

./: Cargo.toml  README.md  index.html  q  site.webmanifest
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: expr.rs  ir.rs  lib.rs  simulator.rs  statement.rs  util.rs
crates/compiler/src/ir/: codegen.rs  mod.rs  optimize.rs  register_allocation.rs  types.rs
crates/mips/src/: error.rs  instructions.rs  lib.rs  types.rs
crates/mips/src/instructions/: flow.rs  io.rs  logic.rs  math.rs  misc.rs  stack.rs  variable.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  format.rs  grammar.lalrpop  lib.rs
crates/scripts/: Cargo.toml
crates/wasm/: Cargo.toml
examples/: counter.ayy
flake-parts/: cargo.nix  rust-toolchain.nix  shells.nix  web.nix
public/: index.html
wasm/: ayysee_wasm_bg.wasm
