[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/doriath/galvanic"
license = "MIT"
repository = "https://github.com/doriath/galvanic"
version = "0.2.1"

[workspace.dependencies]
anyhow = "1.0.68"
serde_json = "1.0.87"
test-log = {version = "0.2", features = ["trace"]}
thiserror = "1.0.38"
tracing = "0.1.37"
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "0.4.34"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
opt-level = 2

[profile.release.package]
